--- a/MAD-2021/MAD-2021.vcxproj.filters
+++ b/MAD-2021/MAD-2021.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="SemAnalysis.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Generation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Out.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SemAnalysis.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Generation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
