--- a/MAD-2021/MAD-2021.vcxproj.filters
+++ b/MAD-2021/MAD-2021.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClCompile Include="Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LPLab14.cpp">
+    <ClCompile Include="MAD-2021.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LT.cpp">
